# zero2prod

./: .dockerignore  .drone.yml  .env.template  .gitignore  Cargo.toml  README.md  docker-compose.yml  sqlx-data.json
docker/dev/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/prod/: .env.template  Dockerfile  build.sh  docker-compose.yml
migrations/: 20211120222921_create_subscriptions_table.sql  20211120222921_create_subscriptions_table.up.sql  20220705205914_add_status_to_subscription.down.sql  20220705205914_add_status_to_subscription.sql  20220705210213_make_status_not_null_in_subscriptions.down.sql  20220705210213_make_status_not_null_in_subscriptions.sql  20220705210444_create_subscription_tokens_table.down.sql  20220705210444_create_subscription_tokens_table.sql  20220809084211_add_subscriber_token_use_flag.down.sql  20220809084211_add_subscriber_token_use_flag.sql  20220809084211_add_subscriber_token_use_flag.up.sql  20220825135558_create_users_table.sql  20220825142127_rename_password_column.sql  20220907090322_seed_user.sql  20220921155600_create_newsletter_issues_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscriber_token.rs
src/idempotency/: key.rs  mod.rs  persistance.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login_form.html  post.rs
tests/: health_check.rs
tests-rest/: email_client.http  login.http  subscriptions.http
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
