[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.0.4"
actix-web = "4.0.1"
serde = "1.0.136"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
dotenv = "0.15.0"
chrono = "0.4.19"
tracing = { version = "0.1.32", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"
unicode-segmentation = "1.9.0"
validator = "0.14.0"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
claim = "0.5.0"
once_cell = "1.10.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1.17.0", features = ["rt", "macros"] }
wiremock = "0.5.13"
serde_json = "1.0.79"
