[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.0.4"
actix-web = "4.0.1"
anyhow = "1.0.62"
argon2 = { version = "0.4.1", features = ["std"] }
base64 = "0.13.0"
chrono = "0.4.19"
dotenv = "0.15.0"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.136"
thiserror = "1.0.32"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
tracing = { version = "0.1.32", features = ["log"] }
tracing-actix-web = "0.5.1"
tracing-bunyan-formatter = "0.3.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
unicode-segmentation = "1.9.0"
validator = "0.14.0"
actix-web-flash-messages = { version = "0.4.1", features = ["cookies"] }

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3"
linkify = "0.9.0"
once_cell = "1.10.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["rt", "macros"] }
wiremock = "0.5.13"
