[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
anyhow = "1.0.40"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.13.0"
chrono = "0.4.19"
dotenv = "0.15.0"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.136"
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.9"
url = "2.2.2"
validator = "0.15"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "offline",
  "postgres",
  "runtime-actix-rustls",
  "uuid"
]

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.uuid]
version = "1.1"
features = ["v4", "serde"]

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
linkify = "0.9"
once_cell = "1.10"
quickcheck = "0.9"
quickcheck_macros = "0.9"
wiremock = "0.5"
